# parse-tcac

./: LICENSE  README.md  pyproject.toml
parse_tcac/: collector.py
tests/: test_parse_tcac.py
