[tool.poetry]
name = "parse-tcac"
version = "0.1.0"
description = ""
authors = ["Lysk <kroyer.github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.7"
black = "^20.8b1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
